--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
+    "@craco/types": "^7.0.0",
+    "postcss-nested": "^6.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
