--- a/client/package.json
+++ b/client/package.json
@@ -44,7 +44,10 @@
   "devDependencies": {
     "@craco/craco": "^7.0.0",
     "@craco/types": "^7.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "postcss-nested": "^6.0.0",
+    "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
